Two more endpoints, adding and removing GroupComputers
