# adapter/restapi/endpoints/operations/group_computer/join_computer_to_group.go
@@ -1,0 +1,69 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package group_computer
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// JoinComputerToGroupHandlerFunc turns a function with the right signature into a join computer to group handler
+type JoinComputerToGroupHandlerFunc func(JoinComputerToGroupParams, interface{}) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn JoinComputerToGroupHandlerFunc) Handle(params JoinComputerToGroupParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
+}
+
+// JoinComputerToGroupHandler interface for that can handle valid join computer to group params
+type JoinComputerToGroupHandler interface {
+	Handle(JoinComputerToGroupParams, interface{}) middleware.Responder
+}
+
+// NewJoinComputerToGroup creates a new http.Handler for the join computer to group operation
+func NewJoinComputerToGroup(ctx *middleware.Context, handler JoinComputerToGroupHandler) *JoinComputerToGroup {
+	return &JoinComputerToGroup{Context: ctx, Handler: handler}
+}
+
+/* JoinComputerToGroup swagger:route POST /user/current/computers/current/groups/{group_id}/join group computer joinComputerToGroup
+
+JoinComputerToGroup join computer to group API
+
+*/
+type JoinComputerToGroup struct {
+	Context *middleware.Context
+	Handler JoinComputerToGroupHandler
+}
+
+func (o *JoinComputerToGroup) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewJoinComputerToGroupParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc.(interface{}) // this is really a interface{}, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
