# adapter/restapi/endpoints/operations/group_computer/join_computer_to_group_responses.go
@@ -1,0 +1,190 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package group_computer
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"mnimidamonbackend/adapter/restapi/modelapi"
+)
+
+// JoinComputerToGroupOKCode is the HTTP code returned for type JoinComputerToGroupOK
+const JoinComputerToGroupOKCode int = 200
+
+/*JoinComputerToGroupOK The group computer
+
+swagger:response joinComputerToGroupOK
+*/
+type JoinComputerToGroupOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.GroupComputer `json:"body,omitempty"`
+}
+
+// NewJoinComputerToGroupOK creates JoinComputerToGroupOK with default headers values
+func NewJoinComputerToGroupOK() *JoinComputerToGroupOK {
+
+	return &JoinComputerToGroupOK{}
+}
+
+// WithPayload adds the payload to the join computer to group o k response
+func (o *JoinComputerToGroupOK) WithPayload(payload *modelapi.GroupComputer) *JoinComputerToGroupOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the join computer to group o k response
+func (o *JoinComputerToGroupOK) SetPayload(payload *modelapi.GroupComputer) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *JoinComputerToGroupOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// JoinComputerToGroupBadRequestCode is the HTTP code returned for type JoinComputerToGroupBadRequest
+const JoinComputerToGroupBadRequestCode int = 400
+
+/*JoinComputerToGroupBadRequest Supplied parameters were not okay.
+
+swagger:response joinComputerToGroupBadRequest
+*/
+type JoinComputerToGroupBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewJoinComputerToGroupBadRequest creates JoinComputerToGroupBadRequest with default headers values
+func NewJoinComputerToGroupBadRequest() *JoinComputerToGroupBadRequest {
+
+	return &JoinComputerToGroupBadRequest{}
+}
+
+// WithPayload adds the payload to the join computer to group bad request response
+func (o *JoinComputerToGroupBadRequest) WithPayload(payload *modelapi.Error) *JoinComputerToGroupBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the join computer to group bad request response
+func (o *JoinComputerToGroupBadRequest) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *JoinComputerToGroupBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// JoinComputerToGroupUnauthorizedCode is the HTTP code returned for type JoinComputerToGroupUnauthorized
+const JoinComputerToGroupUnauthorizedCode int = 401
+
+/*JoinComputerToGroupUnauthorized Unauthorized.
+
+swagger:response joinComputerToGroupUnauthorized
+*/
+type JoinComputerToGroupUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewJoinComputerToGroupUnauthorized creates JoinComputerToGroupUnauthorized with default headers values
+func NewJoinComputerToGroupUnauthorized() *JoinComputerToGroupUnauthorized {
+
+	return &JoinComputerToGroupUnauthorized{}
+}
+
+// WithPayload adds the payload to the join computer to group unauthorized response
+func (o *JoinComputerToGroupUnauthorized) WithPayload(payload *modelapi.Error) *JoinComputerToGroupUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the join computer to group unauthorized response
+func (o *JoinComputerToGroupUnauthorized) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *JoinComputerToGroupUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// JoinComputerToGroupInternalServerErrorCode is the HTTP code returned for type JoinComputerToGroupInternalServerError
+const JoinComputerToGroupInternalServerErrorCode int = 500
+
+/*JoinComputerToGroupInternalServerError Internal server error.
+
+swagger:response joinComputerToGroupInternalServerError
+*/
+type JoinComputerToGroupInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewJoinComputerToGroupInternalServerError creates JoinComputerToGroupInternalServerError with default headers values
+func NewJoinComputerToGroupInternalServerError() *JoinComputerToGroupInternalServerError {
+
+	return &JoinComputerToGroupInternalServerError{}
+}
+
+// WithPayload adds the payload to the join computer to group internal server error response
+func (o *JoinComputerToGroupInternalServerError) WithPayload(payload *modelapi.Error) *JoinComputerToGroupInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the join computer to group internal server error response
+func (o *JoinComputerToGroupInternalServerError) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *JoinComputerToGroupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
