# adapter/restapi/endpoints/operations/group_computer/leave_computer_from_group.go
@@ -1,0 +1,69 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package group_computer
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// LeaveComputerFromGroupHandlerFunc turns a function with the right signature into a leave computer from group handler
+type LeaveComputerFromGroupHandlerFunc func(LeaveComputerFromGroupParams, interface{}) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn LeaveComputerFromGroupHandlerFunc) Handle(params LeaveComputerFromGroupParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
+}
+
+// LeaveComputerFromGroupHandler interface for that can handle valid leave computer from group params
+type LeaveComputerFromGroupHandler interface {
+	Handle(LeaveComputerFromGroupParams, interface{}) middleware.Responder
+}
+
+// NewLeaveComputerFromGroup creates a new http.Handler for the leave computer from group operation
+func NewLeaveComputerFromGroup(ctx *middleware.Context, handler LeaveComputerFromGroupHandler) *LeaveComputerFromGroup {
+	return &LeaveComputerFromGroup{Context: ctx, Handler: handler}
+}
+
+/* LeaveComputerFromGroup swagger:route POST /user/current/computers/current/groups/{group_id}/leave group computer leaveComputerFromGroup
+
+LeaveComputerFromGroup leave computer from group API
+
+*/
+type LeaveComputerFromGroup struct {
+	Context *middleware.Context
+	Handler LeaveComputerFromGroupHandler
+}
+
+func (o *LeaveComputerFromGroup) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewLeaveComputerFromGroupParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc.(interface{}) // this is really a interface{}, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
