# adapter/restapi/endpoints/operations/group_computer/leave_computer_from_group_responses.go
@@ -1,0 +1,170 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package group_computer
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"mnimidamonbackend/adapter/restapi/modelapi"
+)
+
+// LeaveComputerFromGroupNoContentCode is the HTTP code returned for type LeaveComputerFromGroupNoContent
+const LeaveComputerFromGroupNoContentCode int = 204
+
+/*LeaveComputerFromGroupNoContent Successful deletion
+
+swagger:response leaveComputerFromGroupNoContent
+*/
+type LeaveComputerFromGroupNoContent struct {
+}
+
+// NewLeaveComputerFromGroupNoContent creates LeaveComputerFromGroupNoContent with default headers values
+func NewLeaveComputerFromGroupNoContent() *LeaveComputerFromGroupNoContent {
+
+	return &LeaveComputerFromGroupNoContent{}
+}
+
+// WriteResponse to the client
+func (o *LeaveComputerFromGroupNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+// LeaveComputerFromGroupBadRequestCode is the HTTP code returned for type LeaveComputerFromGroupBadRequest
+const LeaveComputerFromGroupBadRequestCode int = 400
+
+/*LeaveComputerFromGroupBadRequest Supplied parameters were not okay.
+
+swagger:response leaveComputerFromGroupBadRequest
+*/
+type LeaveComputerFromGroupBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewLeaveComputerFromGroupBadRequest creates LeaveComputerFromGroupBadRequest with default headers values
+func NewLeaveComputerFromGroupBadRequest() *LeaveComputerFromGroupBadRequest {
+
+	return &LeaveComputerFromGroupBadRequest{}
+}
+
+// WithPayload adds the payload to the leave computer from group bad request response
+func (o *LeaveComputerFromGroupBadRequest) WithPayload(payload *modelapi.Error) *LeaveComputerFromGroupBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the leave computer from group bad request response
+func (o *LeaveComputerFromGroupBadRequest) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LeaveComputerFromGroupBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LeaveComputerFromGroupUnauthorizedCode is the HTTP code returned for type LeaveComputerFromGroupUnauthorized
+const LeaveComputerFromGroupUnauthorizedCode int = 401
+
+/*LeaveComputerFromGroupUnauthorized Unauthorized.
+
+swagger:response leaveComputerFromGroupUnauthorized
+*/
+type LeaveComputerFromGroupUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewLeaveComputerFromGroupUnauthorized creates LeaveComputerFromGroupUnauthorized with default headers values
+func NewLeaveComputerFromGroupUnauthorized() *LeaveComputerFromGroupUnauthorized {
+
+	return &LeaveComputerFromGroupUnauthorized{}
+}
+
+// WithPayload adds the payload to the leave computer from group unauthorized response
+func (o *LeaveComputerFromGroupUnauthorized) WithPayload(payload *modelapi.Error) *LeaveComputerFromGroupUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the leave computer from group unauthorized response
+func (o *LeaveComputerFromGroupUnauthorized) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LeaveComputerFromGroupUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LeaveComputerFromGroupInternalServerErrorCode is the HTTP code returned for type LeaveComputerFromGroupInternalServerError
+const LeaveComputerFromGroupInternalServerErrorCode int = 500
+
+/*LeaveComputerFromGroupInternalServerError Internal server error.
+
+swagger:response leaveComputerFromGroupInternalServerError
+*/
+type LeaveComputerFromGroupInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *modelapi.Error `json:"body,omitempty"`
+}
+
+// NewLeaveComputerFromGroupInternalServerError creates LeaveComputerFromGroupInternalServerError with default headers values
+func NewLeaveComputerFromGroupInternalServerError() *LeaveComputerFromGroupInternalServerError {
+
+	return &LeaveComputerFromGroupInternalServerError{}
+}
+
+// WithPayload adds the payload to the leave computer from group internal server error response
+func (o *LeaveComputerFromGroupInternalServerError) WithPayload(payload *modelapi.Error) *LeaveComputerFromGroupInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the leave computer from group internal server error response
+func (o *LeaveComputerFromGroupInternalServerError) SetPayload(payload *modelapi.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LeaveComputerFromGroupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
